# grandrock

./: AUTHORS  ChangeLog  LICENSE  Makefile.am  TODO  autodel.sh  autogen.sh  configure.ac  index.html
data/: Makefile.am  grandrock.desktop.in
debian/: README  README.source  changelog  control  copyright
src/: Makefile.am  grandrock.cc  xrandr-query.h
